# hello-world

./: .gitattributes  .gitignore  LICENSE  Makefile  README  README.md  exit_code.asm  go.mod  hello.asm  main.go  package.json  print_call.asm  print_rax.asm  strlen.asm  strlen_bug1.asm  test.cc
AoC/: .gitignore
Assembly/: README.md  exit_code.asm  print_call.asm  print_rax.asm
Assembly/Bases/: endianness.asm  strlen.asm  strlen_bug1.asm  structure.asm
DotNet/MyWebApp/: .gitignore
Go/Bases/: array.go  bool.go  chan.go  defer.go  methods.go  reader.go  slice.go  string.go  type-safety.go
Go/Chat-P2P/: README  main.go
Go/FFI-C/: main.go
JavaScript/: init_field.js  modern_style.js  private_field.js  protection.js  rest_n_spread.js  static.js  stdout.mjs
MMXV/rust/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  shared.rs
MikuScript/: README.md  lib.ms
MikuScript/components/: counter.ms  lib.ms  package.json
Rust/Bases/: iter.rs  main.rs  memscan.rs
Rust/Database/: Cargo.toml  meta_command.rs  statement.rs
Rust/Unsafe/: Cargo.toml  diff.c  diff.rs  nomicon.rs
Rust/Web/yew/client/: Cargo.toml  bin.rs  lib.rs
Rust/Web/yew/server/: Cargo.toml  bin.rs
Rust/Windows/API/: Cargo.toml
Rust/Windows/API/src/: api.rs  main.rs
ansible/: README
ansible/containers/: README  main.yml  registry.yml
ansible/solr/: main.yml  requirements.yml
arch/hexagonal/: Cargo.toml
asm/: README.md  endianness.asm  strlen_bug1.asm
asm/lang/: structure.asm
async/: .rustfmt.toml
async/src/: main.rs
async_await/: Cargo.toml
book/ch02-guessing-game-tutorial/: Cargo.toml
bytes/src/: main.rs  read.rs
c/: 0x41.c  calc.c  card.c  lifetime.c  print.c  type.c
c/db/: connection.c  connection.h  meta_command.c  repl.c  (+9 more)
ch03-common-programming-concepts/: Cargo.toml
ch04-understanding-ownership/: Cargo.toml
ch05-structs/: Cargo.toml
ch10-generics/: Cargo.toml
chat/: channel.go  message.go  node.go  state.go
cli/: mod.go
cmp/: Cargo.toml  Makefile
components/: counter.ms  lib.ms  timer.ms
cpu/: Cargo.toml
cxx/: calc.c  card.c  print.c
db/: prepare.rs  repl.rs  string_buffer.rs
dns/: mdns.go
docker/: Dockerfile
fortran/: Makefile  calc.f90  distance.f90  expo.f90  gcd.f90  hello_world.f90  leap_year.f90  parser.f90
from-c/: Makefile  test.cc
global/: array.go  methods.go  slice.go
io/: reader.go
js/: binding_n_this.js  computed_name_properties.js  default_value.js  destructuring.js
k8s/: main.yml
lock-free-to-wait-free/: Cargo.toml  README.md
mm/: mod.go
multicasting/: Cargo.toml
net/: parse-ip.go
rust/ui/windows/: Cargo.toml
rust/ui/windows/src/: main.rs
ui/: event.go  log.go  mod.go  view.go
zds/: Makefile  ch02.cpp  ch03.cpp  ch04.cpp  ch05.cpp
(+547 files in other folders)
