[package]
name = "windows-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "windows-api"
path = "src/api.rs"

[dependencies]
windows = { version = "0.39.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio_DirectSound",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_Input_XboxController",
    "Win32_UI_WindowsAndMessaging",
] }
windows-sys = { version = "0.36.1", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }
lazy_static = "1.4.0"
