[package]
name = "web-yew-server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "./bin.rs"

[dependencies]
web-yew-client = { path = "../client" }
yew = { git = "https://github.com/yewstack/yew", features = ["ssr", "tokio"] }
yew-router = { git = "https://github.com/yewstack/yew", package = "yew-router" }
anyhow = "^1.0"
axum = "^0.5"
futures = "^0.3"
lazy_static = "^1.4"
num_cpus = "^1.13"
once_cell = "^1.15"
tokio = { version = "^1.21", features = ["full"] }
tokio-util = { version = "^0.7", features = ["rt"] }
tower = { version = "^0.4", features = ["make"] }
tower-http = { version = "^0.3", features = ["fs"] }
